--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "styled-components": "^3.1.6"
   },
   "scripts": {
-    "start": "parcel index.html -p 3000"
+    "start": "parcel index.html -p 3000",
+    "build": "parcel build index.html --public-url /",
+    "serve": "serve ./dist -p 3000"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.6.1"
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
